src/main/grammars/Symbol.bnf
{
  parserClass="io.runescript.plugin.symbollang.parser.RsSymParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="RsSym"
  psiImplClassSuffix="Impl"
  psiPackage="io.runescript.plugin.symbollang.psi"
  psiImplPackage="io.runescript.plugin.symbollang.psi.impl"
  elementTypeHolderClass="io.runescript.plugin.symbollang.psi.RsSymElementTypes"
  elementTypeClass="io.runescript.plugin.symbollang.psi.RsSymElementType"
  tokenTypeClass="io.runescript.plugin.symbollang.psi.RsSymElementType"
  parserImports=[
    'static com.intellij.psi.TokenType.*'
  ]
  generateTokenAccessors=true
  classHeader="// This class is automatically generated. Do not edit."
  tokens=[
    NEW_LINE='\n'
    TAB='\t'
  ]
}

File ::= (Symbol | '\n' | '\t')*
Symbol ::= Field '\t' Field ('\t' Field)* '\t'* '\n' {
    mixin="io.runescript.plugin.symbollang.psi.mixin.RsSymSymbolMixin"
    stubClass="io.runescript.plugin.symbollang.psi.stub.RsSymSymbolStub"
    elementTypeFactory="io.runescript.plugin.symbollang.psi.stub.RsSymStubElementFactory.create"
    implements="io.runescript.plugin.lang.psi.RsNamedElement"
}
Field ::= STRING {
    stubClass="io.runescript.plugin.symbollang.psi.stub.RsSymFieldStub"
    elementTypeFactory="io.runescript.plugin.symbollang.psi.stub.RsSymStubElementFactory.create"
}
